[gd_scene load_steps=3 format=3 uid="uid://oyl4lcyygmkb"]

[ext_resource type="Script" uid="uid://dqf8bo8yurd4a" path="res://tela_saves.gd" id="1_sqf36"]
[ext_resource type="Texture2D" uid="uid://ejlvru5o0ely" path="res://icon.svg" id="2_dwu4v"]

[node name="TelaSaves" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqf36")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = 4.0
offset_right = 18.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 300
alignment = 1

[node name="arquivo1" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("2_dwu4v")

[node name="file1" type="Label" parent="HBoxContainer/arquivo1"]
layout_mode = 0
offset_left = 60.0
offset_top = 349.0
offset_right = 100.0
offset_bottom = 372.0
text = "File 1"

[node name="Apagar1" type="Button" parent="HBoxContainer/arquivo1"]
layout_mode = 0
offset_left = 43.0
offset_top = 388.0
offset_right = 126.0
offset_bottom = 419.0
text = "Apagar"

[node name="arquivo2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_dwu4v")

[node name="file2" type="Label" parent="HBoxContainer/arquivo2"]
layout_mode = 0
offset_left = 46.0
offset_top = 325.0
offset_right = 86.0
offset_bottom = 348.0
text = "File 2"

[node name="Apagar2" type="Button" parent="HBoxContainer/arquivo2"]
layout_mode = 0
offset_left = 38.0
offset_top = 395.0
offset_right = 101.0
offset_bottom = 426.0
text = "Apagar"

[node name="arquivo3" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_dwu4v")

[node name="file3" type="Label" parent="HBoxContainer/arquivo3"]
layout_mode = 0
offset_left = 15.0
offset_top = 368.0
offset_right = 55.0
offset_bottom = 391.0
text = "File 3"

[node name="Apagar3" type="Button" parent="HBoxContainer/arquivo3"]
layout_mode = 0
offset_left = 2.0
offset_top = 410.0
offset_right = 90.0
offset_bottom = 443.0
text = "Apagar"

[node name="Voltar" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.939
anchor_top = 0.91
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.271973
offset_top = 0.320007
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_dwu4v")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="HBoxContainer/arquivo1" to="." method="_on_arquivo_1_pressed"]
[connection signal="pressed" from="HBoxContainer/arquivo2" to="." method="_on_arquivo_2_pressed"]
[connection signal="pressed" from="HBoxContainer/arquivo3" to="." method="_on_arquivo_3_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
