extends Control


func _on_arquivo_1_pressed() -> void:
	get_tree().change_scene_to_file("res://telajogo.tscn")



func _on_arquivo_2_pressed() -> void:
	get_tree().change_scene_to_file("res://telajogo.tscn")


func _on_arquivo_3_pressed() -> void:
	get_tree().change_scene_to_file("res://telajogo.tscn")


func _on_voltar_pressed() -> void:
	get_tree().change_scene_to_file("res://tela_menu.tscn")
